# learning-pcl

./: .gitignore  LICENSE  README.md
001_hello_world/: CMakeLists.txt
001_hello_world/src/: main.cpp
002_centering_cloud/: CMakeLists.txt
002_centering_cloud/src/: main.cpp  my_point_cloud.cpp  my_point_cloud.hpp
003_transforming_cloud/src/: main.cpp  my_point_cloud.cpp  my_point_cloud.hpp
